allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: cartservice

  policyTypes:
  - Egress

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis-cart
    ports:
    - protocol: TCP
      port: 6379
