allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-to-redis
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis-cart

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice
    ports:
    - protocol: TCP
      port: 6379
